# neural_network

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: activations.hpp  lingebra.hpp  loader.hpp  model.hpp  optimizer.hpp  random.hpp  trainer.hpp
src/: CMakeLists.txt  main.cpp  model.cpp  optimizer.cpp  random.cpp  trainer.cpp
